fixed digit overflow

--- a/style.css
+++ b/style.css
@@ -68,4 +68,5 @@ body {
 h1 {
   height: 30px;
   padding-top: 20px;
+  width: 400px;
 }
